--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/236x/3f/02/7e/3f027ecfe7c8c3b33b365099ad541d7b.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>App de César</title>
   </head>
   <body>
     <div id="root"></div>
